--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
+feedparser==6.0.11
+html2text==2024.2.26
+html5lib==1.1
 idna==3.6
 joblib==1.3.2
 lxml==5.2.1
@@ -18,9 +21,11 @@ regex==2023.12.25
 requests==2.31.0
 scikit-learn==1.4.1.post1
 scipy==1.13.0
+sgmllib3k==1.0.0
 six==1.16.0
 soupsieve==2.5
 threadpoolctl==3.4.0
 tqdm==4.66.2
 tzdata==2024.1
 urllib3==2.2.1
+webencodings==0.5.1
