--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,18 @@ html5lib==1.1
 idna==3.6
 joblib==1.3.2
 lxml==5.2.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
 nltk==3.8.1
 numpy==1.26.4
 pandas==2.2.1
+Pygments==2.18.0
 pymongo==4.6.3
 python-dateutil==2.9.0.post0
 pytz==2024.1
 regex==2023.12.25
 requests==2.31.0
+rich==13.7.1
 scikit-learn==1.4.1.post1
 scipy==1.13.0
 sgmllib3k==1.0.0
