--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+async-timeout==4.0.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
@@ -6,6 +11,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 feedparser==6.0.11
+frozenlist==1.4.1
 html2text==2024.2.26
 html5lib==1.1
 idna==3.6
@@ -13,9 +19,12 @@ joblib==1.3.2
 lxml==5.2.1
 markdown-it-py==3.0.0
 mdurl==0.1.2
+multidict==6.0.5
 nltk==3.8.1
 numpy==1.26.4
 pandas==2.2.1
+pydantic==2.7.2
+pydantic_core==2.18.3
 Pygments==2.18.0
 pymongo==4.6.3
 python-dateutil==2.9.0.post0
@@ -30,6 +39,8 @@ six==1.16.0
 soupsieve==2.5
 threadpoolctl==3.4.0
 tqdm==4.66.2
+typing_extensions==4.12.0
 tzdata==2024.1
 urllib3==2.2.1
 webencodings==0.5.1
+yarl==1.9.4
