--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
-            "program": "LibCrawler.py",
+            "program": "app/LibCrawler.py",
             "console": "integratedTerminal",
             "args": ["nodb", "res.txt"]
         }
