--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Docker run
         run: |
-         
+          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
           docker run -d -p 3000:3000 --name inha-notify-scraper -e server_address="${{ secrets.SERVER_ADDRESS }}" \
           --restart always ${{ env.DOCKER_IMAGE }}:latest 
 
